--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@
                 bedrock: "How to join on Bedrock?",
             },
             answers: {
-                java: "First, get whitelisted. Then, add the server with this address:<div class='copy-container'><code>tiriniox.serveminecraft.net:24565</code><button class='copy-btn' data-copy='tiriniox.serveminecraft.net:24565'><i class='fas fa-copy'></i></button></div>",
+                java: "First, get whitelisted. Then, add the server with this address:<div class='copy-container'><code>triniox.serveminecraft.net:24565</code><button class='copy-btn' data-copy='triniox.serveminecraft.net:24565'><i class='fas fa-copy'></i></button></div>",
                 bedrock: "First, get whitelisted. Then, join this server:<div class='copy-container'><code>eu.geyserconnect.net</code><button class='copy-btn' data-copy='eu.geyserconnect.net'><i class='fas fa-copy'></i></button></div>Use port <code>19132</code>. After joining, you will be prompted to add our server."
             }
         },
@@ -1207,7 +1207,7 @@
                 bedrock: "چۆن لە بێدڕۆک بچمە ژوورەوە؟",
             },
             answers: {
-                java: "یەکەم، دڵنیابە کە ناوت لە وایتلیستە. پاشان، سێرڤەرەکە بەم ناونیشانە زیاد بکە:<div class='copy-container'><code>tiriniox.serveminecraft.net:24565</code><button class='copy-btn' data-copy='tiriniox.serveminecraft.net:24565'><i class='fas fa-copy'></i></button></div>",
+                java: "یەکەم، دڵنیابە کە ناوت لە وایتلیستە. پاشان، سێرڤەرەکە بەم ناونیشانە زیاد بکە:<div class='copy-container'><code>triniox.serveminecraft.net:24565</code><button class='copy-btn' data-copy='triniox.serveminecraft.net:24565'><i class='fas fa-copy'></i></button></div>",
                 bedrock: "یەکەم، ناوت بخە وایتلیست. پاشان، بچۆ ناو ئەم سێرڤەرە:<div class='copy-container'><code>eu.geyserconnect.net</code><button class='copy-btn' data-copy='eu.geyserconnect.net'><i class='fas fa-copy'></i></button></div>پۆرتی <code>19132</code> بەکاربێنە. کاتێک چوویتە ژوورەوەی گایزەر، داوات لێدەکرێت ناونیشانی سێرڤەری ئێمە بنووسیت."
             }
         }
